--- a/Money-Bunny/src/app/help/help.component.css
+++ b/Money-Bunny/src/app/help/help.component.css
@@ -9,6 +9,10 @@ div.daiscroll{
     width: 12rem;
     height: auto;
 }
+.logobig {
+    width: 20rem;
+    height: auto;
+}
 .logosmall {
     width: 6rem;
     height: auto;
