Initial Transactions Report

--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -83,12 +83,12 @@
     <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Action</span>
+              <span class="font-weight-bold card-mb-header">Transactions Report</span>
               <i class="fa fa-credit-card mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">Information</h5>
-            <a class="btn mb-button" routerLink="/login">Action</a>
+            <h5 class="card-title">View your transactions and information about them</h5>
+            <a class="btn mb-button" routerLink="/transactions-report">Select</a>
           </div>
         </div>
     </div>
