--- a/Money-Bunny/src/app/register/register.component.html
+++ b/Money-Bunny/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-center mt-4">
     <form>
         <div class="row mb-3">
             <div class="col-12 col-sm-12 justify-content-center d-flex">
