--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -72,7 +72,7 @@
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Transaction</span>
-              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+              <i class="fa fa-money mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
             <h5 class="card-title">Make a new transaction to an account</h5>
@@ -84,7 +84,7 @@
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Transactions Report</span>
-              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+              <i class="fa fa-list mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
             <h5 class="card-title">View your transactions and information about them</h5>
