--- a/Money-Bunny/src/app/transactions-report/transactions-report.component.html
+++ b/Money-Bunny/src/app/transactions-report/transactions-report.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <div class="row">
-        <div class="col-12 col-sm-12">
-            <table class="table text-center">
+        <div class="col-12 col-sm-12 table-responsive">
+            <table id="transactions-table" class="table table-hover table-light text-center table-bordered table-striped">
                 <thead>
                     <tr>
                         <th scope="col" class="mb-color font-weight-bold h4">Destination IBAN</th>
@@ -14,13 +14,21 @@
                 <tbody>
                     <tr *ngFor="let transaction of this.transactions">
                         <th>{{transaction['IBAN_dest']}}</th>
-                        <th>{{transaction['IBAN_src']}}</th>
+                        <th>{{transaction['account_iban']}}</th>
                         <th>{{transaction['amount']}}</th>
-                        <th>{{transaction['date'].toDate() | date: 'dd-MM-yyyy'}}</th>
-                        <th>{{transaction['recurrent_days']}}</th>
+                        <th>{{transaction['date'].toDate() | date: 'HH:MM dd-MM-yyyy'}}</th>
+                        <th>{{transaction['recurrent_days'] == 0 ? 'Not recurrent' : transaction['recurrent_days']}}</th>
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-6 d-flex justify-content-end">
+            <a class="btn mb-button mr-4" (click)="downloadPDF()">Download as PDF</a>
+        </div>
+        <div class="col-6">
+            
         </div>
     </div>
 </div>
