--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -9,7 +9,8 @@
                 <div class="form-outline mb-3">
                     <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" id="password" class="form-control p-3 input-style" placeholder="Password" required>
                 </div>
-              
+                <!-- <a class="text font-error" *ngIf="message !== '' && message !== 'Success'">{{ message }}</a> -->
+
                 <div class="row justify-content-center input-style">
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="remember" checked>
