--- a/Money-Bunny/src/app/operator-menu/operator-menu.component.html
+++ b/Money-Bunny/src/app/operator-menu/operator-menu.component.html
@@ -1,1 +1,73 @@
-<p>operator-menu works!</p>
+<div class="container mt-3">
+	<div class="row justify-content-center">
+		<h1 class="mb-color font-weight-bold">Your pending requests</h1>
+	</div>
+	<div class="row mt-2" *ngFor="let request of this.requests">
+	  <div class="col-12 col-sm-12">
+		<a class="h2 text-decoration-none account-link font-weight-bold" data-toggle="collapse" href="#{{request['email']}}" role="button" aria-expanded="false">
+			{{ request['email'] }}
+			<i class="fa fa-chevron-circle-down pull-right"></i>
+		</a>
+		<hr>
+		<div class="collapse" id="{{request['email']}}">
+		  <div class="card card-body">
+			<div class="row text-center">
+			  <div class="col-6 col-sm">
+				<div class="row">
+				  <div class="col-12">
+					<h4 class="mb-color font-weight-bold">Type</h4>
+				  </div>
+				</div>
+				<div class="row mt-2">
+				  <div class="col-12">
+					<h4 class="font-weight-bold">{{request['requestType']}}</h4>
+				  </div>
+				</div>
+			  </div>
+			  <!--<div class="col-6 col-sm">
+				<div class="row">
+				  <div class="col-12">
+					<h4 class="font-weight-bold mb-color">Email</h4>
+				  </div>
+				</div>
+				<div class="row mt-2">
+				  <div class="col-12">
+					<h4 class="font-weight-bold">{{request['email']}}</h4>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-6 col-sm">
+				<div class="row">
+				  <div class="col-12">
+					<h4 class="font-weight-bold mb-color">Account Type</h4>
+				  </div>
+				</div>
+				<div class="row mt-2">
+				  <div class="col-12">
+					<h4 class="font-weight-bold">{{account['account_type']}}</h4>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-6 col-sm">
+				<div class="row">
+				  <div class="col-12">
+					<h4 class="font-weight-bold mb-color">Date Added</h4>
+				  </div>
+				</div>
+				<div class="row mt-2">
+				  <div class="col-12">
+					<h4 class="font-weight-bold">{{account['open_date'].toDate()| date: 'dd-MM-yyyy'}}</h4>
+				  </div>
+				</div>
+			  </div>-->
+			</div>
+			<div class="row mt-2">
+				<div class="col-12 col-sm-12 d-flex justify-content-center">
+					<a class="btn mb-button" (click)="this.selectAccount(request.id)">Select</a>
+				</div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </div>
