--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -95,12 +95,50 @@
     <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Action</span>
+              <span class="font-weight-bold card-mb-header">Apply for Credit Card</span>
               <i class="fa fa-credit-card mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">Information</h5>
-            <a class="btn mb-button" routerLink="/login">Action</a>
+            <h5 class="card-title">Apply for a Credit Card and send the appliance to an Operator</h5>
+            <a class="btn mb-button" (click)="this.auth.unsetCurrentAccount()" routerLink="/bank-select">Select</a>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-4 mb-3">
+      <div class="card">
+          <div class="card-header d-flex justify-content-between">
+              <span class="font-weight-bold card-mb-header">Plan Payments</span>
+              <i class="fa fa-money mb-color card-mb-icon"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title">Plan A Recurrent Payment</h5>
+            <a class="btn mb-button" routerLink="">Select</a>
+          </div>
+        </div>
+    </div>
+    <div class="col-12 col-sm-4 mb-3">
+      <div class="card">
+          <div class="card-header d-flex justify-content-between">
+            <span class="font-weight-bold card-mb-header">Pay Bills</span>
+            <i class="fa fa-money mb-color card-mb-icon"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title">Pay your Utility Bill</h5>
+            <a class="btn mb-button" routerLink="">Select</a>
+          </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-4 mb-3">
+      <div class="card">
+          <div class="card-header d-flex justify-content-between">
+              <span class="font-weight-bold card-mb-header">Exchange Currency</span>
+              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title">Exchange to a different currency</h5>
+            <a class="btn mb-button" routerLink="/">Select</a>
           </div>
         </div>
     </div>
